@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.1.1.1 2007/06/10 11:39:31 abs Exp $
+
+SHA1 (Sub-Exporter-0.974.tar.gz) = fa51f97899a29a78df61dc36051c624e95414543
+RMD160 (Sub-Exporter-0.974.tar.gz) = 180666d554cafe3c62d755248b2b0d39abbb6e32
+Size (Sub-Exporter-0.974.tar.gz) = 44209 bytes
